# gba-rasgamortalha

./: .gitignore  Cargo.toml  README.org  build-rom.sh  rasgamortalha.gba
sfx/peaks/: bgm.wav.reapeaks
src/: main.rs
