[package]
name = "gba-rasgamortalha"
version = "0.1.0"
authors = ["Nasrezine"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.22.5"
agb_tracker = "0.22.5"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
